# GameOfLife

./: .env  CMakeLists.txt  README.md
GUI/: CMakeLists.txt  GUI.cpp  MainWindow.cpp  MainWindow.hpp
Profiling/Final/: MAIN.callgrind  MAIN.out
Profiling/First/: callgrind.MAIN  prof.out
configs/: Base.cfg  Large.cfg
include/: GameBoard.hpp  GameEngine.hpp
src/: CMakeLists.txt  GameBoard.cpp  GameEngine.cpp  main.cpp
test/: CMakeLists.txt
